modified:   index.html

--- a/index.html
+++ b/index.html
@@ -160,31 +160,31 @@
                 <div class="swiper-wrapper">
 
                     <div class="swiper-slide service">
-                        <img src="/public/img/home/gallery/gallery_1.png" alt="" class="service__img">
+                        <img src="public/img/home/gallery/gallery_1.png" alt="" class="service__img">
                         <h4 class="service__title">Handmade</h4>
                         <span class="service__text">Handmade</span>
                     </div>
 
                     <div class="swiper-slide service">
-                        <img src="/public/img/home/gallery/gallery_2.jpg" alt="" class="service__img">
+                        <img src="public/img/home/gallery/gallery_2.jpg" alt="" class="service__img">
                         <h4 class="service__title">Singer Machine</h4>
                         <span class="service__text">Custom Tailored</span>
                     </div>
 
                     <div class="swiper-slide service">
-                        <img src="/public/img/home/gallery/gallery_3.jpg" alt="" class="service__img">
+                        <img src="public/img/home/gallery/gallery_3.jpg" alt="" class="service__img">
                         <h4 class="service__title">Body Measure</h4>
                         <span class="service__text">Custom Tailored</span>
                     </div>
 
                     <div class="swiper-slide service">
-                        <img src="/public/img/home/gallery/gallery_4.png" alt="" class="service__img">
+                        <img src="public/img/home/gallery/gallery_4.png" alt="" class="service__img">
                         <h4 class="service__title">Dress Tailor</h4>
                         <span class="service__text">Dress Tailor</span>
                     </div>
 
                     <div class="swiper-slide service">
-                        <img src="/public/img/home/gallery/gallery_5.jpg" alt="" class="service__img">
+                        <img src="public/img/home/gallery/gallery_5.jpg" alt="" class="service__img">
                         <h4 class="service__title">Design Sketches</h4>
                         <span class="service__text">Design</span>
                     </div>
@@ -238,7 +238,7 @@
             </button>
         </div>
         <div class="blog-banner__img">
-            <img src="/public/img/home/home_1.jpg" alt="">
+            <img src="public/img/home/home_1.jpg" alt="">
         </div>
     </section>
 
@@ -252,19 +252,19 @@
 
         <div class="masters__wrap">
             <div class="master">
-                <img src="/public/img/home/masters/master_1.jpg" alt="" class="master__img">
+                <img src="public/img/home/masters/master_1.jpg" alt="" class="master__img">
                 <h4 class="master__name">Karolina Nilov</h4>
                 <h5 class="master__job">Modelist</h5>
             </div>
 
             <div class="master">
-                <img src="/public/img/home/masters/master_2.png" alt="" class="master__img">
+                <img src="public/img/home/masters/master_2.png" alt="" class="master__img">
                 <h4 class="master__name">Noemi Chang</h4>
                 <h5 class="master__job">Art Director</h5>
             </div>
 
             <div class="master">
-                <img src="/public/img/home/masters/master_3.png" alt="" class="master__img">
+                <img src="public/img/home/masters/master_3.png" alt="" class="master__img">
                 <h4 class="master__name">Pablo Burrows</h4>
                 <h5 class="master__job">First Tailor</h5>
             </div>
@@ -424,7 +424,7 @@
             </div>
         </div>
         <div class="statistics__banner">
-            <img src="/public/img/home/home_3.jpg" alt="" width="1920" height="646">
+            <img src="public/img/home/home_3.jpg" alt="" width="1920" height="646">
         </div>
     </section>
 
@@ -449,7 +449,7 @@
                             iaculis dolor ut.”
                         </span>
                         <span class="review__author">Melanie Stil</span>
-                        <img src="/public/img/home/comments/comment_avatar_1.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_1.png" alt="" class="review__img">
                     </div>
 
                     <div class="swiper-slide review">
@@ -460,7 +460,7 @@
                             vitae feugiat iaculis.”
                         </span>
                         <span class="review__author">Tailor</span>
-                        <img src="/public/img/home/comments/comment_avatar_2.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_2.png" alt="" class="review__img">
                     </div>
 
                     <div class="swiper-slide review">
@@ -472,7 +472,7 @@
                             justo hendrerit luctus."
                         </span>
                         <span class="review__author">Sara Brune</span>
-                        <img src="/public/img/home/comments/comment_avatar_3.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_3.png" alt="" class="review__img">
                     </div>
 
                     <div class="swiper-slide review">
@@ -485,7 +485,7 @@
                             iaculis dolor ut.”
                         </span>
                         <span class="review__author">Melanie Stil</span>
-                        <img src="/public/img/home/comments/comment_avatar_1.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_1.png" alt="" class="review__img">
                     </div>
 
                     <div class="swiper-slide review">
@@ -496,7 +496,7 @@
                             vitae feugiat iaculis.”
                         </span>
                         <span class="review__author">Tailor</span>
-                        <img src="/public/img/home/comments/comment_avatar_2.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_2.png" alt="" class="review__img">
                     </div>
 
                     <div class="swiper-slide review">
@@ -508,7 +508,7 @@
                             justo hendrerit luctus."
                         </span>
                         <span class="review__author">Sara Brune</span>
-                        <img src="/public/img/home/comments/comment_avatar_3.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_3.png" alt="" class="review__img">
                     </div>
 
                 </div>
@@ -523,7 +523,7 @@
     <section class="blog-banner2">
 
         <div class="blog-banner2__img">
-            <img src="/public/img/home/home_2.jpg" alt="">
+            <img src="public/img/home/home_2.jpg" alt="">
         </div>
 
         <div class="blog-banner2__content">
@@ -554,7 +554,7 @@
             <div class="articles__list">
 
                 <article class="article">
-                    <img src="/public/img/home/articles/atricle_img_1.jpg" alt="" class="article__img">
+                    <img src="public/img/home/articles/atricle_img_1.jpg" alt="" class="article__img">
                     <h1 class="article__name">Colorful and fashionable wardrobe</h1>
                     <div>
                         <span class="article__date">April 20, 2023</span>
@@ -563,7 +563,7 @@
                 </article>
 
                 <article class="article">
-                    <img src="/public/img/home/articles/atricle_img_2.jpg" alt="" class="article__img">
+                    <img src="public/img/home/articles/atricle_img_2.jpg" alt="" class="article__img">
                     <h1 class="article__name">Handmade suit for elegant event</h1>
                     <div>
                         <span class="article__date">April 20, 2023</span>
@@ -572,7 +572,7 @@
                 </article>
 
                 <article class="article">
-                    <img src="/public/img/home/articles/atricle_img_3.jpg" alt="" class="article__img">
+                    <img src="public/img/home/articles/atricle_img_3.jpg" alt="" class="article__img">
                     <h1 class="article__name">Spring-summer fashion ideas 2023</h1>
                     <div>
                         <span class="article__date">April 20, 2023</span>
@@ -581,7 +581,7 @@
                 </article>
 
                 <article class="article">
-                    <img src="/public/img/home/articles/atricle_img_4.jpg" alt="" class="article__img">
+                    <img src="public/img/home/articles/atricle_img_4.jpg" alt="" class="article__img">
                     <h1 class="article__name">DIY dress for wedding season</h1>
                     <div>
                         <span class="article__date">April 20, 2023</span>
@@ -621,20 +621,20 @@
     <section class="clients">
         <div class="swiper-clients">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_1.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_2.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_3.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_4.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_5.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_6.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_7.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_1.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_2.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_3.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_4.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_5.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_6.png" alt=""></div>
-                <div class="swiper-slide"><img src="/public/img/home/clients/client_7.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_1.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_2.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_3.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_4.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_5.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_6.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_7.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_1.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_2.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_3.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_4.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_5.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_6.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_7.png" alt=""></div>
             </div>
         </div>
     </section>
