modified:   css/styles.css 	modified:   index.html 	modified:   js/swiper.js 	deleted:    public/img/footer/footer_bg.png 	new file:   public/img/footer/footer_bg.webp 	deleted:    public/img/home/articles/atricle_img_1.jpg 	new file:   public/img/home/articles/atricle_img_1.webp 	deleted:    public/img/home/articles/atricle_img_2.jpg 	new file:   public/img/home/articles/atricle_img_2.webp 	deleted:    public/img/home/articles/atricle_img_3.jpg 	new file:   public/img/home/articles/atricle_img_3.webp 	deleted:    public/img/home/articles/atricle_img_4.jpg 	new file:   public/img/home/articles/atricle_img_4.webp 	deleted:    public/img/home/gallery/gallery_1.png 	new file:   public/img/home/gallery/gallery_1.webp 	deleted:    public/img/home/gallery/gallery_2.jpg 	new file:   public/img/home/gallery/gallery_2.webp 	deleted:    public/img/home/gallery/gallery_3.jpg 	new file:   public/img/home/gallery/gallery_3.webp 	deleted:    public/img/home/gallery/gallery_4.png 	new file:   public/img/home/gallery/gallery_4.webp 	deleted:    public/img/home/gallery/gallery_5.jpg 	new file:   public/img/home/gallery/gallery_5.webp 	deleted:    public/img/home/hero/hero_bg_1.jpg 	new file:   public/img/home/hero/hero_bg_1.webp 	deleted:    public/img/home/hero/hero_bg_2.jpg 	new file:   public/img/home/hero/hero_bg_2.webp 	deleted:    public/img/home/hero/hero_bg_3.jpg 	new file:   public/img/home/hero/hero_bg_3.webp 	deleted:    public/img/home/home_1.jpg 	new file:   public/img/home/home_1.webp 	deleted:    public/img/home/home_2.jpg 	new file:   public/img/home/home_2.webp 	deleted:    public/img/home/home_3.jpg 	new file:   public/img/home/home_3.webp 	deleted:    public/img/home/masters/master_1.jpg 	new file:   public/img/home/masters/master_1.webp 	deleted:    public/img/home/masters/master_2.jpg 	deleted:    public/img/home/masters/master_2.png 	new file:   public/img/home/masters/master_2.webp 	deleted:    public/img/home/masters/master_3.jpg 	deleted:    public/img/home/

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <picture>
                 <source media="(max-width:1024px)" srcset="public/img/logo/dark_logo.png">
-                <img src="public/img/logo/logo-stickey.png" alt="logo">
+                <img src="public/img/logo/logo-stickey.png" alt="logo" width="140" height="20">
             </picture>
 
             <div class="header__phone">
@@ -36,7 +36,7 @@
         </div>
 
         <div class="header__bottom">
-            <button type="button" class="header__search-btn">
+            <button type="button" class="header__search-btn" aria-label="search">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="19" height="19" fill="#fff">
                     <path
                         d="M18.031 16.6168L22.3137 20.8995L20.8995 22.3137L16.6168 18.031C15.0769 19.263 13.124 20 11 20C6.032 20 2 15.968 2 11C2 6.032 6.032 2 11 2C15.968 2 20 6.032 20 11C20 13.124 19.263 15.0769 18.031 16.6168ZM16.0247 15.8748C17.2475 14.6146 18 12.8956 18 11C18 7.1325 14.8675 4 11 4C7.1325 4 4 7.1325 4 11C4 14.8675 7.1325 18 11 18C12.8956 18 14.6146 17.2475 15.8748 16.0247L16.0247 15.8748Z">
@@ -53,7 +53,7 @@
                     <li><a href="/">Shop</a></li>
                 </ol>
             </nav>
-            <button type="button" class="header__sidebar-btn">
+            <button type="button" class="header__sidebar-btn" aria-label="sidebar">
                 <span>Info</span>
                 <svg viewBox="0 0 120 120" width="36" height="36" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     fill="none" stroke="#fff" stroke-width="3">
@@ -125,8 +125,8 @@
 
             </div>
 
-            <button type="button" class="swiper-hero-prev"></button>
-            <button type="button" class="swiper-hero-next"></button>
+            <button type="button" aria-label="prev" class="swiper-hero-prev"></button>
+            <button type="button" aria-label="next" class="swiper-hero-next"></button>
 
 
             <div class="swiper-hero-pagination">
@@ -160,31 +160,36 @@
                 <div class="swiper-wrapper">
 
                     <div class="swiper-slide service">
-                        <img src="public/img/home/gallery/gallery_1.png" alt="" class="service__img">
+                        <img src="public/img/home/gallery/gallery_1.webp" alt="" class="service__img" width="302"
+                            height="458" loading="lazy">
                         <h4 class="service__title">Handmade</h4>
                         <span class="service__text">Handmade</span>
                     </div>
 
                     <div class="swiper-slide service">
-                        <img src="public/img/home/gallery/gallery_2.jpg" alt="" class="service__img">
+                        <img src="public/img/home/gallery/gallery_2.webp" alt="" class="service__img" width="302"
+                            height="458" loading="lazy">
                         <h4 class="service__title">Singer Machine</h4>
                         <span class="service__text">Custom Tailored</span>
                     </div>
 
                     <div class="swiper-slide service">
-                        <img src="public/img/home/gallery/gallery_3.jpg" alt="" class="service__img">
+                        <img src="public/img/home/gallery/gallery_3.webp" alt="" class="service__img" width="302"
+                            height="458" loading="lazy">
                         <h4 class="service__title">Body Measure</h4>
                         <span class="service__text">Custom Tailored</span>
                     </div>
 
                     <div class="swiper-slide service">
-                        <img src="public/img/home/gallery/gallery_4.png" alt="" class="service__img">
+                        <img src="public/img/home/gallery/gallery_4.webp" alt="" class="service__img" width="302"
+                            height="458" loading="lazy">
                         <h4 class="service__title">Dress Tailor</h4>
                         <span class="service__text">Dress Tailor</span>
                     </div>
 
                     <div class="swiper-slide service">
-                        <img src="public/img/home/gallery/gallery_5.jpg" alt="" class="service__img">
+                        <img src="public/img/home/gallery/gallery_5.webp" alt="" class="service__img" width="302"
+                            height="458" loading="lazy">
                         <h4 class="service__title">Design Sketches</h4>
                         <span class="service__text">Design</span>
                     </div>
@@ -238,7 +243,7 @@
             </button>
         </div>
         <div class="blog-banner__img">
-            <img src="public/img/home/home_1.jpg" alt="">
+            <img src="public/img/home/home_1.webp" alt="" loading="lazy" width="1400" height="1580">
         </div>
     </section>
 
@@ -252,19 +257,22 @@
 
         <div class="masters__wrap">
             <div class="master">
-                <img src="public/img/home/masters/master_1.jpg" alt="" class="master__img">
+                <img src="public/img/home/masters/master_1.webp" alt="" class="master__img" width="320" height="450"
+                    loading="lazy">
                 <h4 class="master__name">Karolina Nilov</h4>
                 <h5 class="master__job">Modelist</h5>
             </div>
 
             <div class="master">
-                <img src="public/img/home/masters/master_2.png" alt="" class="master__img">
+                <img src="public/img/home/masters/master_2.webp" alt="" class="master__img" width="320" height="450"
+                    loading="lazy">
                 <h4 class="master__name">Noemi Chang</h4>
                 <h5 class="master__job">Art Director</h5>
             </div>
 
             <div class="master">
-                <img src="public/img/home/masters/master_3.png" alt="" class="master__img">
+                <img src="public/img/home/masters/master_3.webp" alt="" class="master__img" width="320" height="450"
+                    loading="lazy">
                 <h4 class="master__name">Pablo Burrows</h4>
                 <h5 class="master__job">First Tailor</h5>
             </div>
@@ -424,7 +432,7 @@
             </div>
         </div>
         <div class="statistics__banner">
-            <img src="public/img/home/home_3.jpg" alt="" width="1920" height="646">
+            <img src="public/img/home/home_3.webp" alt="" width="1920" height="1255" loading="lazy">
         </div>
     </section>
 
@@ -449,7 +457,8 @@
                             iaculis dolor ut.”
                         </span>
                         <span class="review__author">Melanie Stil</span>
-                        <img src="public/img/home/comments/comment_avatar_1.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_1.png" alt="" class="review__img" width="80"
+                            height="80" loading="lazy">
                     </div>
 
                     <div class="swiper-slide review">
@@ -460,7 +469,8 @@
                             vitae feugiat iaculis.”
                         </span>
                         <span class="review__author">Tailor</span>
-                        <img src="public/img/home/comments/comment_avatar_2.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_2.png" alt="" class="review__img" width="80"
+                            height="80" loading="lazy">
                     </div>
 
                     <div class="swiper-slide review">
@@ -472,7 +482,8 @@
                             justo hendrerit luctus."
                         </span>
                         <span class="review__author">Sara Brune</span>
-                        <img src="public/img/home/comments/comment_avatar_3.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_3.png" alt="" class="review__img" width="80"
+                            height="80" loading="lazy">
                     </div>
 
                     <div class="swiper-slide review">
@@ -485,7 +496,8 @@
                             iaculis dolor ut.”
                         </span>
                         <span class="review__author">Melanie Stil</span>
-                        <img src="public/img/home/comments/comment_avatar_1.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_1.png" alt="" class="review__img" width="80"
+                            height="80" loading="lazy">
                     </div>
 
                     <div class="swiper-slide review">
@@ -496,7 +508,8 @@
                             vitae feugiat iaculis.”
                         </span>
                         <span class="review__author">Tailor</span>
-                        <img src="public/img/home/comments/comment_avatar_2.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_2.png" alt="" class="review__img" width="80"
+                            height="80" loading="lazy">
                     </div>
 
                     <div class="swiper-slide review">
@@ -508,7 +521,8 @@
                             justo hendrerit luctus."
                         </span>
                         <span class="review__author">Sara Brune</span>
-                        <img src="public/img/home/comments/comment_avatar_3.png" alt="" class="review__img">
+                        <img src="public/img/home/comments/comment_avatar_3.png" alt="" class="review__img" width="80"
+                            height="80" loading="lazy">
                     </div>
 
                 </div>
@@ -523,7 +537,7 @@
     <section class="blog-banner2">
 
         <div class="blog-banner2__img">
-            <img src="public/img/home/home_2.jpg" alt="">
+            <img src="public/img/home/home_2.webp" alt="" width="970" height="1090" loading="lazy">
         </div>
 
         <div class="blog-banner2__content">
@@ -554,7 +568,8 @@
             <div class="articles__list">
 
                 <article class="article">
-                    <img src="public/img/home/articles/atricle_img_1.jpg" alt="" class="article__img">
+                    <img src="public/img/home/articles/atricle_img_1.webp" alt="" class="article__img" width="393"
+                        height="324" loading="lazy">
                     <h1 class="article__name">Colorful and fashionable wardrobe</h1>
                     <div>
                         <span class="article__date">April 20, 2023</span>
@@ -563,7 +578,8 @@
                 </article>
 
                 <article class="article">
-                    <img src="public/img/home/articles/atricle_img_2.jpg" alt="" class="article__img">
+                    <img src="public/img/home/articles/atricle_img_2.webp" alt="" class="article__img" width="393"
+                        height="324" loading="lazy">
                     <h1 class="article__name">Handmade suit for elegant event</h1>
                     <div>
                         <span class="article__date">April 20, 2023</span>
@@ -572,7 +588,8 @@
                 </article>
 
                 <article class="article">
-                    <img src="public/img/home/articles/atricle_img_3.jpg" alt="" class="article__img">
+                    <img src="public/img/home/articles/atricle_img_3.webp" alt="" class="article__img" width="393"
+                        height="324" loading="lazy">
                     <h1 class="article__name">Spring-summer fashion ideas 2023</h1>
                     <div>
                         <span class="article__date">April 20, 2023</span>
@@ -581,7 +598,8 @@
                 </article>
 
                 <article class="article">
-                    <img src="public/img/home/articles/atricle_img_4.jpg" alt="" class="article__img">
+                    <img src="public/img/home/articles/atricle_img_4.webp" alt="" class="article__img" width="393"
+                        height="324" loading="lazy">
                     <h1 class="article__name">DIY dress for wedding season</h1>
                     <div>
                         <span class="article__date">April 20, 2023</span>
@@ -621,20 +639,34 @@
     <section class="clients">
         <div class="swiper-clients">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="public/img/home/clients/client_1.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_2.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_3.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_4.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_5.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_6.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_7.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_1.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_2.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_3.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_4.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_5.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_6.png" alt=""></div>
-                <div class="swiper-slide"><img src="public/img/home/clients/client_7.png" alt=""></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_1.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_2.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_3.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_4.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_5.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_6.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_7.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_1.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_2.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_3.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_4.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_5.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_6.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
+                <div class="swiper-slide"><img src="public/img/home/clients/client_7.png" alt="" width="100"
+                        height="100" loading="lazy"></div>
             </div>
         </div>
     </section>
@@ -644,14 +676,14 @@
         <div class="footer__container">
 
             <div class="footer__meta">
-                <h2 class="footer__title"><img src="public/img/logo/light_logo.png" alt=""></h2>
+                <h2 class="footer__title"><img src="public/img/logo/light_logo.png" alt="" width="114" height="20"></h2>
                 <span class="footer__text"> Discover the finest tailor and haute couture studio in town, get in touch
                     with us and let’s start
                     the work on your new suit together.</span>
 
                 <div class="footer__socials">
 
-                    <a href="#">
+                    <a href="#" aria-label="social">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
                             fill="rgba(255,255,255,1)">
                             <path
@@ -660,7 +692,7 @@
                         </svg>
                     </a>
 
-                    <a href="#">
+                    <a href="#" aria-label="social">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
                             fill="rgba(255,255,255,1)">
                             <path
@@ -669,7 +701,7 @@
                         </svg>
                     </a>
 
-                    <a href="#">
+                    <a href="#" aria-label="social">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
                             fill="rgba(255,255,255,1)">
                             <path
@@ -678,7 +710,7 @@
                         </svg>
                     </a>
 
-                    <a href="#">
+                    <a href="#" aria-label="social">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
                             fill="rgba(255,255,255,1)">
                             <path
@@ -717,7 +749,7 @@
                 <span class="footer-form__text">Sign up for exclusive offers, original stories, events and more.</span>
                 <label>
                     <input type="email" placeholder="Your email *">
-                    <button>
+                    <button aria-label="submit">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16"
                             fill="rgba(255,255,255,1)">
                             <path
@@ -731,9 +763,8 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script type="module" src="js/swiper.js"></script>
-    <script src="js/animation.js"></script>
+    <script type="module" src="js/swiper.js" defer></script>
+    <script src="js/animation.js" defer></script>
 </body>
 
 </html>
